--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); /* optional backdrop */
+  z-index: 4000;
 }
 
 #letter-content {
