--- a/style.css
+++ b/style.css
@@ -245,3 +245,32 @@ body {
   border-radius: 4px;
   cursor: pointer;
 }
+.attachment-viewer {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0,0,0,0.6);
+  z-index: 4000;
+}
+
+.attachment-content {
+  background: white;
+  padding: 20px;
+  max-width: 800px;
+  max-height: 90%;
+  overflow-y: auto;
+  border-radius: 8px;
+}
+
+.attachment-icon {
+  cursor: pointer;
+  background-color: #eef;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: bold;
+}
